[gd_scene load_steps=3 format=3 uid="uid://cportal123456"]

[ext_resource type="Script" uid="uid://ceafmwn2j0qlh" path="res://scenes/environment/portals/universe_portal.gd" id="1_portal"]

[sub_resource type="CircleShape2D" id="CircleShape2D_portal"]
radius = 48.0

[node name="UniversePortal" type="Area2D"]
collision_layer = 64
script = ExtResource("1_portal")

[node name="OuterRing" type="Line2D" parent="."]
width = 3.0
default_color = Color(0.5, 0.7, 1, 1)

[node name="InnerRing" type="Line2D" parent="."]
width = 2.0
default_color = Color(0.4, 0.6, 1, 1)

[node name="CenterGlow" type="Polygon2D" parent="."]
color = Color(0.3, 0.4, 0.7, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_portal")
